<resources>
    <string name="app_name">Food</string>

    <string name="order_food">点餐</string>
    <string name="add_food">加餐</string>
    <string name="payment">付款</string>

    <string name="confirm">确认</string>
    <string name="set_hint_input_url">请输入访问的地址</string>
    <string name="set_save_data_null">保存的数据不能为空</string>
    <string name="set_save_data_no_change">"数据没有改变"</string>

    <string name="delete">删除</string>
    <string name="clear">清空</string>
    <string name="selected_shopping">已选商品</string>
    <string name="no_shop_name">暂无商品名</string>
    <string name="no_shop_type_name">暂无类型名</string>
    <string name="no_selected_shop">未选购商品</string>
    <string name="go_to_settlement">下订单</string>
    <string name="money_mark">¥</string>

</resources>
