<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mtv_order_food"
            android:layout_width="@dimen/main_circle_width"
            android:layout_height="@dimen/main_circle_height"
            android:gravity="center"
            android:text="@string/order_food"
            android:textColor="@color/color_common_white"
            android:textSize="@dimen/common_text_size_large_xxx"
            android:background="@drawable/selector_circle_green"/>
        <TextView
            android:id="@+id/mtv_add_food"
            android:layout_width="@dimen/main_circle_width"
            android:layout_height="@dimen/main_circle_height"
            android:gravity="center"
            android:layout_marginLeft="@dimen/main_circle_margin"
            android:text="@string/add_food"
            android:textColor="@color/color_common_white"
            android:textSize="@dimen/common_text_size_large_xxx"
            android:background="@drawable/selector_circle_pink"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mtv_payment"
            android:layout_width="@dimen/main_circle_width"
            android:layout_height="@dimen/main_circle_height"
            android:gravity="center"
            android:text="@string/payment"
            android:textColor="@color/color_common_white"
            android:textSize="@dimen/common_text_size_large_xxx"
            android:background="@drawable/selector_circle_blue"/>
    </LinearLayout>

</LinearLayout>
